Try to fix horizontal scrolling bug on deployed URL

--- a/static/assets/stylesheets/homepage.css
+++ b/static/assets/stylesheets/homepage.css
@@ -61,10 +61,13 @@
     color: white;
     position: relative;
     z-index: 0;
-    padding: 2rem;
+    padding: 1rem;
     border-radius: 0.5rem;
     overflow: hidden;
-    height: 100%; 
+    height: 100%;
+    width: 100%;            
+    box-sizing: border-box;
+    word-wrap: break-word;
 }
 
 /* Make sure features box content is layered above the overlay */
